--- a/style.css
+++ b/style.css
@@ -214,3 +214,47 @@ padding: 10px;
   border-radius: 5px;
   cursor: pointer;
 }
+.job-details {
+  background: #ffffff;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.job-details h1 {
+  color: #b80000;
+  text-align: center;
+}
+
+.job-details h2 {
+  text-align: center;
+  color: green;
+  margin-bottom: 20px;
+}
+
+.job-box {
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.job-box h3 {
+  color: #0d6efd;
+  margin-bottom: 10px;
+}
+
+.job-box ul {
+  padding-left: 20px;
+}
+
+.apply-now {
+  display: block;
+  text-align: center;
+  background: green;
+  color: white;
+  padding: 12px;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+}
